# CppND-System-Monitor

./: CMakeLists.txt
include/: file_reader.h  format.h  linux_parser.h  ncurses_display.h  process.h  processor.h  system.h
src/: file_reader.cpp  format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
test/: ut_linux_parser.cpp
test/dummy_files/: testReadWhileFileChanges.txt
test/dummy_files/proc/: stat
